Assembler/y.output
Grammar

    0 $accept: start $end

    1 start: statement_list NEWLINE STOP

    2 statement_list: statement
    3               | statement_list NEWLINE statement

    4 statement: /* empty */
    5          | ID ':' SPACE instr optionComment
    6          | instr optionComment

    7 optionComment: /* empty */
    8              | SPACE COMMENT

    9 instr: ID SPACE DD SPACE number_list
   10      | MVI SPACE A ',' NUMBER
   11      | MVI SPACE A ',' ID
   12      | MVI SPACE B ',' NUMBER
   13      | MVI SPACE B ',' ID
   14      | MVI SPACE C ',' NUMBER
   15      | MVI SPACE C ',' ID
   16      | MVI SPACE I ',' NUMBER
   17      | MVI SPACE I ',' ID
   18      | LOAD SPACE NUMBER
   19      | LOAD SPACE ID
   20      | STORE SPACE ID
   21      | LOADI
   22      | STORI
   23      | ADD SPACE B
   24      | ADD SPACE C
   25      | MOV SPACE A ',' B
   26      | MOV SPACE A ',' C
   27      | MOV SPACE B ',' C
   28      | MOV SPACE B ',' A
   29      | MOV SPACE C ',' A
   30      | MOV SPACE C ',' B
   31      | INC SPACE A
   32      | INC SPACE B
   33      | INC SPACE C
   34      | CMP SPACE A ',' NUMBER
   35      | CMP SPACE A ',' ID
   36      | CMP SPACE B ',' NUMBER
   37      | CMP SPACE B ',' ID
   38      | CMP SPACE C ',' NUMBER
   39      | CMP SPACE C ',' ID
   40      | ADDI SPACE ID
   41      | ADDI SPACE NUMBER
   42      | JE SPACE ID
   43      | JMP SPACE ID

   44 number_list: NUMBER
   45            | number_list ',' NUMBER


Terminals, with rules where they appear

$end (0) 0
',' (44) 10 11 12 13 14 15 16 17 25 26 27 28 29 30 34 35 36 37 38 39
    45
':' (58) 5
error (256)
DD (258) 9
MVI (259) 10 11 12 13 14 15 16 17
LOADI (260) 21
ADD (261) 23 24
MOV (262) 25 26 27 28 29 30
INC (263) 31 32 33
CMP (264) 34 35 36 37 38 39
JE (265) 42
ADDI (266) 40 41
JMP (267) 43
STORE (268) 20
STOP (269) 1
SPACE (270) 5 8 9 10 11 12 13 14 15 16 17 18 19 20 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
NUMBER (271) 10 12 14 16 18 34 36 38 41 44 45
ID (272) 5 9 11 13 15 17 19 20 35 37 39 40 42 43
NEWLINE (273) 1 3
COMMENT (274) 8
A (275) 10 11 25 26 28 29 31 34 35
B (276) 12 13 23 25 27 28 30 32 36 37
C (277) 14 15 24 26 27 29 30 33 38 39
I (278) 16 17
STORI (279) 22
LOAD (280) 18 19


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
start (29)
    on left: 1, on right: 0
statement_list (30)
    on left: 2 3, on right: 1 3
statement (31)
    on left: 4 5 6, on right: 2 3
optionComment (32)
    on left: 7 8, on right: 5 6
instr (33)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43, on right: 5 6
number_list (34)
    on left: 44 45, on right: 9 45


state 0

    0 $accept: . start $end

    MVI    shift, and go to state 1
    LOADI  shift, and go to state 2
    ADD    shift, and go to state 3
    MOV    shift, and go to state 4
    INC    shift, and go to state 5
    CMP    shift, and go to state 6
    JE     shift, and go to state 7
    ADDI   shift, and go to state 8
    JMP    shift, and go to state 9
    STORE  shift, and go to state 10
    ID     shift, and go to state 11
    STORI  shift, and go to state 12
    LOAD   shift, and go to state 13

    $default  reduce using rule 4 (statement)

    start           go to state 14
    statement_list  go to state 15
    statement       go to state 16
    instr           go to state 17


state 1

   10 instr: MVI . SPACE A ',' NUMBER
   11      | MVI . SPACE A ',' ID
   12      | MVI . SPACE B ',' NUMBER
   13      | MVI . SPACE B ',' ID
   14      | MVI . SPACE C ',' NUMBER
   15      | MVI . SPACE C ',' ID
   16      | MVI . SPACE I ',' NUMBER
   17      | MVI . SPACE I ',' ID

    SPACE  shift, and go to state 18


state 2

   21 instr: LOADI .

    $default  reduce using rule 21 (instr)


state 3

   23 instr: ADD . SPACE B
   24      | ADD . SPACE C

    SPACE  shift, and go to state 19


state 4

   25 instr: MOV . SPACE A ',' B
   26      | MOV . SPACE A ',' C
   27      | MOV . SPACE B ',' C
   28      | MOV . SPACE B ',' A
   29      | MOV . SPACE C ',' A
   30      | MOV . SPACE C ',' B

    SPACE  shift, and go to state 20


state 5

   31 instr: INC . SPACE A
   32      | INC . SPACE B
   33      | INC . SPACE C

    SPACE  shift, and go to state 21


state 6

   34 instr: CMP . SPACE A ',' NUMBER
   35      | CMP . SPACE A ',' ID
   36      | CMP . SPACE B ',' NUMBER
   37      | CMP . SPACE B ',' ID
   38      | CMP . SPACE C ',' NUMBER
   39      | CMP . SPACE C ',' ID

    SPACE  shift, and go to state 22


state 7

   42 instr: JE . SPACE ID

    SPACE  shift, and go to state 23


state 8

   40 instr: ADDI . SPACE ID
   41      | ADDI . SPACE NUMBER

    SPACE  shift, and go to state 24


state 9

   43 instr: JMP . SPACE ID

    SPACE  shift, and go to state 25


state 10

   20 instr: STORE . SPACE ID

    SPACE  shift, and go to state 26


state 11

    5 statement: ID . ':' SPACE instr optionComment
    9 instr: ID . SPACE DD SPACE number_list

    SPACE  shift, and go to state 27
    ':'    shift, and go to state 28


state 12

   22 instr: STORI .

    $default  reduce using rule 22 (instr)


state 13

   18 instr: LOAD . SPACE NUMBER
   19      | LOAD . SPACE ID

    SPACE  shift, and go to state 29


state 14

    0 $accept: start . $end

    $end  shift, and go to state 30


state 15

    1 start: statement_list . NEWLINE STOP
    3 statement_list: statement_list . NEWLINE statement

    NEWLINE  shift, and go to state 31


state 16

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 17

    6 statement: instr . optionComment

    SPACE  shift, and go to state 32

    $default  reduce using rule 7 (optionComment)

    optionComment  go to state 33


state 18

   10 instr: MVI SPACE . A ',' NUMBER
   11      | MVI SPACE . A ',' ID
   12      | MVI SPACE . B ',' NUMBER
   13      | MVI SPACE . B ',' ID
   14      | MVI SPACE . C ',' NUMBER
   15      | MVI SPACE . C ',' ID
   16      | MVI SPACE . I ',' NUMBER
   17      | MVI SPACE . I ',' ID

    A  shift, and go to state 34
    B  shift, and go to state 35
    C  shift, and go to state 36
    I  shift, and go to state 37


state 19

   23 instr: ADD SPACE . B
   24      | ADD SPACE . C

    B  shift, and go to state 38
    C  shift, and go to state 39


state 20

   25 instr: MOV SPACE . A ',' B
   26      | MOV SPACE . A ',' C
   27      | MOV SPACE . B ',' C
   28      | MOV SPACE . B ',' A
   29      | MOV SPACE . C ',' A
   30      | MOV SPACE . C ',' B

    A  shift, and go to state 40
    B  shift, and go to state 41
    C  shift, and go to state 42


state 21

   31 instr: INC SPACE . A
   32      | INC SPACE . B
   33      | INC SPACE . C

    A  shift, and go to state 43
    B  shift, and go to state 44
    C  shift, and go to state 45


state 22

   34 instr: CMP SPACE . A ',' NUMBER
   35      | CMP SPACE . A ',' ID
   36      | CMP SPACE . B ',' NUMBER
   37      | CMP SPACE . B ',' ID
   38      | CMP SPACE . C ',' NUMBER
   39      | CMP SPACE . C ',' ID

    A  shift, and go to state 46
    B  shift, and go to state 47
    C  shift, and go to state 48


state 23

   42 instr: JE SPACE . ID

    ID  shift, and go to state 49


state 24

   40 instr: ADDI SPACE . ID
   41      | ADDI SPACE . NUMBER

    NUMBER  shift, and go to state 50
    ID      shift, and go to state 51


state 25

   43 instr: JMP SPACE . ID

    ID  shift, and go to state 52


state 26

   20 instr: STORE SPACE . ID

    ID  shift, and go to state 53


state 27

    9 instr: ID SPACE . DD SPACE number_list

    DD  shift, and go to state 54


state 28

    5 statement: ID ':' . SPACE instr optionComment

    SPACE  shift, and go to state 55


state 29

   18 instr: LOAD SPACE . NUMBER
   19      | LOAD SPACE . ID

    NUMBER  shift, and go to state 56
    ID      shift, and go to state 57


state 30

    0 $accept: start $end .

    $default  accept


state 31

    1 start: statement_list NEWLINE . STOP
    3 statement_list: statement_list NEWLINE . statement

    MVI    shift, and go to state 1
    LOADI  shift, and go to state 2
    ADD    shift, and go to state 3
    MOV    shift, and go to state 4
    INC    shift, and go to state 5
    CMP    shift, and go to state 6
    JE     shift, and go to state 7
    ADDI   shift, and go to state 8
    JMP    shift, and go to state 9
    STORE  shift, and go to state 10
    STOP   shift, and go to state 58
    ID     shift, and go to state 11
    STORI  shift, and go to state 12
    LOAD   shift, and go to state 13

    $default  reduce using rule 4 (statement)

    statement  go to state 59
    instr      go to state 17


state 32

    8 optionComment: SPACE . COMMENT

    COMMENT  shift, and go to state 60


state 33

    6 statement: instr optionComment .

    $default  reduce using rule 6 (statement)


state 34

   10 instr: MVI SPACE A . ',' NUMBER
   11      | MVI SPACE A . ',' ID

    ','  shift, and go to state 61


state 35

   12 instr: MVI SPACE B . ',' NUMBER
   13      | MVI SPACE B . ',' ID

    ','  shift, and go to state 62


state 36

   14 instr: MVI SPACE C . ',' NUMBER
   15      | MVI SPACE C . ',' ID

    ','  shift, and go to state 63


state 37

   16 instr: MVI SPACE I . ',' NUMBER
   17      | MVI SPACE I . ',' ID

    ','  shift, and go to state 64


state 38

   23 instr: ADD SPACE B .

    $default  reduce using rule 23 (instr)


state 39

   24 instr: ADD SPACE C .

    $default  reduce using rule 24 (instr)


state 40

   25 instr: MOV SPACE A . ',' B
   26      | MOV SPACE A . ',' C

    ','  shift, and go to state 65


state 41

   27 instr: MOV SPACE B . ',' C
   28      | MOV SPACE B . ',' A

    ','  shift, and go to state 66


state 42

   29 instr: MOV SPACE C . ',' A
   30      | MOV SPACE C . ',' B

    ','  shift, and go to state 67


state 43

   31 instr: INC SPACE A .

    $default  reduce using rule 31 (instr)


state 44

   32 instr: INC SPACE B .

    $default  reduce using rule 32 (instr)


state 45

   33 instr: INC SPACE C .

    $default  reduce using rule 33 (instr)


state 46

   34 instr: CMP SPACE A . ',' NUMBER
   35      | CMP SPACE A . ',' ID

    ','  shift, and go to state 68


state 47

   36 instr: CMP SPACE B . ',' NUMBER
   37      | CMP SPACE B . ',' ID

    ','  shift, and go to state 69


state 48

   38 instr: CMP SPACE C . ',' NUMBER
   39      | CMP SPACE C . ',' ID

    ','  shift, and go to state 70


state 49

   42 instr: JE SPACE ID .

    $default  reduce using rule 42 (instr)


state 50

   41 instr: ADDI SPACE NUMBER .

    $default  reduce using rule 41 (instr)


state 51

   40 instr: ADDI SPACE ID .

    $default  reduce using rule 40 (instr)


state 52

   43 instr: JMP SPACE ID .

    $default  reduce using rule 43 (instr)


state 53

   20 instr: STORE SPACE ID .

    $default  reduce using rule 20 (instr)


state 54

    9 instr: ID SPACE DD . SPACE number_list

    SPACE  shift, and go to state 71


state 55

    5 statement: ID ':' SPACE . instr optionComment

    MVI    shift, and go to state 1
    LOADI  shift, and go to state 2
    ADD    shift, and go to state 3
    MOV    shift, and go to state 4
    INC    shift, and go to state 5
    CMP    shift, and go to state 6
    JE     shift, and go to state 7
    ADDI   shift, and go to state 8
    JMP    shift, and go to state 9
    STORE  shift, and go to state 10
    ID     shift, and go to state 72
    STORI  shift, and go to state 12
    LOAD   shift, and go to state 13

    instr  go to state 73


state 56

   18 instr: LOAD SPACE NUMBER .

    $default  reduce using rule 18 (instr)


state 57

   19 instr: LOAD SPACE ID .

    $default  reduce using rule 19 (instr)


state 58

    1 start: statement_list NEWLINE STOP .

    $default  reduce using rule 1 (start)


state 59

    3 statement_list: statement_list NEWLINE statement .

    $default  reduce using rule 3 (statement_list)


state 60

    8 optionComment: SPACE COMMENT .

    $default  reduce using rule 8 (optionComment)


state 61

   10 instr: MVI SPACE A ',' . NUMBER
   11      | MVI SPACE A ',' . ID

    NUMBER  shift, and go to state 74
    ID      shift, and go to state 75


state 62

   12 instr: MVI SPACE B ',' . NUMBER
   13      | MVI SPACE B ',' . ID

    NUMBER  shift, and go to state 76
    ID      shift, and go to state 77


state 63

   14 instr: MVI SPACE C ',' . NUMBER
   15      | MVI SPACE C ',' . ID

    NUMBER  shift, and go to state 78
    ID      shift, and go to state 79


state 64

   16 instr: MVI SPACE I ',' . NUMBER
   17      | MVI SPACE I ',' . ID

    NUMBER  shift, and go to state 80
    ID      shift, and go to state 81


state 65

   25 instr: MOV SPACE A ',' . B
   26      | MOV SPACE A ',' . C

    B  shift, and go to state 82
    C  shift, and go to state 83


state 66

   27 instr: MOV SPACE B ',' . C
   28      | MOV SPACE B ',' . A

    A  shift, and go to state 84
    C  shift, and go to state 85


state 67

   29 instr: MOV SPACE C ',' . A
   30      | MOV SPACE C ',' . B

    A  shift, and go to state 86
    B  shift, and go to state 87


state 68

   34 instr: CMP SPACE A ',' . NUMBER
   35      | CMP SPACE A ',' . ID

    NUMBER  shift, and go to state 88
    ID      shift, and go to state 89


state 69

   36 instr: CMP SPACE B ',' . NUMBER
   37      | CMP SPACE B ',' . ID

    NUMBER  shift, and go to state 90
    ID      shift, and go to state 91


state 70

   38 instr: CMP SPACE C ',' . NUMBER
   39      | CMP SPACE C ',' . ID

    NUMBER  shift, and go to state 92
    ID      shift, and go to state 93


state 71

    9 instr: ID SPACE DD SPACE . number_list

    NUMBER  shift, and go to state 94

    number_list  go to state 95


state 72

    9 instr: ID . SPACE DD SPACE number_list

    SPACE  shift, and go to state 27


state 73

    5 statement: ID ':' SPACE instr . optionComment

    SPACE  shift, and go to state 32

    $default  reduce using rule 7 (optionComment)

    optionComment  go to state 96


state 74

   10 instr: MVI SPACE A ',' NUMBER .

    $default  reduce using rule 10 (instr)


state 75

   11 instr: MVI SPACE A ',' ID .

    $default  reduce using rule 11 (instr)


state 76

   12 instr: MVI SPACE B ',' NUMBER .

    $default  reduce using rule 12 (instr)


state 77

   13 instr: MVI SPACE B ',' ID .

    $default  reduce using rule 13 (instr)


state 78

   14 instr: MVI SPACE C ',' NUMBER .

    $default  reduce using rule 14 (instr)


state 79

   15 instr: MVI SPACE C ',' ID .

    $default  reduce using rule 15 (instr)


state 80

   16 instr: MVI SPACE I ',' NUMBER .

    $default  reduce using rule 16 (instr)


state 81

   17 instr: MVI SPACE I ',' ID .

    $default  reduce using rule 17 (instr)


state 82

   25 instr: MOV SPACE A ',' B .

    $default  reduce using rule 25 (instr)


state 83

   26 instr: MOV SPACE A ',' C .

    $default  reduce using rule 26 (instr)


state 84

   28 instr: MOV SPACE B ',' A .

    $default  reduce using rule 28 (instr)


state 85

   27 instr: MOV SPACE B ',' C .

    $default  reduce using rule 27 (instr)


state 86

   29 instr: MOV SPACE C ',' A .

    $default  reduce using rule 29 (instr)


state 87

   30 instr: MOV SPACE C ',' B .

    $default  reduce using rule 30 (instr)


state 88

   34 instr: CMP SPACE A ',' NUMBER .

    $default  reduce using rule 34 (instr)


state 89

   35 instr: CMP SPACE A ',' ID .

    $default  reduce using rule 35 (instr)


state 90

   36 instr: CMP SPACE B ',' NUMBER .

    $default  reduce using rule 36 (instr)


state 91

   37 instr: CMP SPACE B ',' ID .

    $default  reduce using rule 37 (instr)


state 92

   38 instr: CMP SPACE C ',' NUMBER .

    $default  reduce using rule 38 (instr)


state 93

   39 instr: CMP SPACE C ',' ID .

    $default  reduce using rule 39 (instr)


state 94

   44 number_list: NUMBER .

    $default  reduce using rule 44 (number_list)


state 95

    9 instr: ID SPACE DD SPACE number_list .
   45 number_list: number_list . ',' NUMBER

    ','  shift, and go to state 97

    $default  reduce using rule 9 (instr)


state 96

    5 statement: ID ':' SPACE instr optionComment .

    $default  reduce using rule 5 (statement)


state 97

   45 number_list: number_list ',' . NUMBER

    NUMBER  shift, and go to state 98


state 98

   45 number_list: number_list ',' NUMBER .

    $default  reduce using rule 45 (number_list)
